# GeolocationDataManager

./: README.md
GeolocationDataManager/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GeolocationDataManager/Helpers/: IInputValidator.h  InputValidator.cpp  InputValidator.h
GeolocationDataManager/HttpNetwork/: IIpStackClient.h  IpStackClient.cpp  IpStackClient.h
GeolocationDataManager/Persistence/: DatabaseConnectionFactory.cpp  DatabaseConnectionFactory.h  IpBasedLocationDataRepository.cpp  IpBasedLocationDataRepository.h  UrlBasedLocationDataRepository.cpp  UrlBasedLocationDataRepository.h
GeolocationDataManager/Persistence/Interface/: IDatabaseConnectionFactory.h  IIpBasedLocationDataRepository.h  IUrlBasedLocationDataRepository.h
GeolocationDataManager/Persistence/Model/: IpBasedLocationData.cpp  IpBasedLocationData.h  UrlBasedLocationData.cpp  UrlBasedLocationData.h
GeolocationDataManagerTest/: .gitignore  CMakeLists.txt  GeolocationDataManagerTestMain.cpp  InMemoryDatabaseConnectionFactory.cpp  InMemoryDatabaseConnectionFactory.h  InputValidator_Should.cpp  InputValidator_Should.h  IpBasedLocationDataRepository_Should.cpp  IpBasedLocationDataRepository_Should.h  UrlBasedLocationDataRepository_Should.cpp  UrlBasedLocationDataRepository_Should.h
